--- a/style.css
+++ b/style.css
@@ -92,27 +92,6 @@ a:active {
     line-height: 1.2;
 }
 
-@media only screen and (max-width: 800px) {
-    body {
-        width: 95%;
-    }
-
-    #heading {
-        font-size: 2.3em;
-    }
-
-    #subheading {
-        font-size: 1.8em;
-    }
-}
-
-@media screen and (orientation:portrait) {
-    #canvas {
-        width: 75vw;
-        height: 75vw;
-    }
-}
-
 .control-wrapper {
     display: flex;
     flex-shrink: 0;
@@ -139,7 +118,7 @@ form input:focus {
 }
 
 button {
-    margin: 20px;
+    margin: 10px;
     border-radius: 6px;
     font-size: 1em;
     padding: 10px;
@@ -208,4 +187,37 @@ form {
 
 .icon:hover {
     border: none;
+}
+
+@media only screen and (max-width: 800px) {
+    body {
+        width: 95%;
+    }
+
+    #heading {
+        font-size: 2.3em;
+    }
+
+    #subheading {
+        font-size: 1.8em;
+    }
+    .result {
+        flex-direction: column;
+    }
+}
+
+@media screen and (orientation:portrait) {
+    #canvas {
+        width: 75vw;
+        height: 75vw;
+    }
+}
+
+.actions {
+    display: flex;
+}
+
+.small-text {
+    font-size: 1em;
+    text-align: center;
 }
