--- a/style.css
+++ b/style.css
@@ -220,3 +220,22 @@ form {
     font-size: 1em;
     text-align: center;
 }
+
+#mask {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    box-sizing: border-box;
+}
+
+#mask-text {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
